--- a/French.lng
+++ b/French.lng
@@ -5,7 +5,7 @@
 |~LANGUAGEAUTHOR|
 |Ronan Plantec|
 |~LANGUAGEAUTHOREMAIL|
-|frt15t@boribar.com|
+|frt15t@boribar.com, http://www.boribar.com/|
 |&Close|
 |&Fermer|
 |&Generate Random Password|
